--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,13 @@ img {
 	max-width:100%;
 }
 
+iframe {
+	height: 600px;
+	width: 450px;
+	resize: both;
+	overflow: auto;
+  }
+
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .form-control {
 	display: inline-block;
 	margin-bottom: 20px;
