--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,18 @@ img {
 	max-width:100%;
 }
 
+.resizable {
+    width: 100%;
+    height: 100%;
+	align-items: center;
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+}
 iframe {
-	height: 600px;
-	width: 450px;
-	resize: both;
-	overflow: auto;
-  }
+    width: 100%;
+    height: 100%;
+}
 
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .form-control {
 	display: inline-block;
